css/index.css
@import url('https://fonts.googleapis.com/css?family=Arizonia');


body {
	margin:25px;
}

#background-img{
    background-image: url("../images/new background.jpg");
    height: 400px;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}

#header-section h1 {
	font-size: 3.5em;
	font-family: Arizonia, cursive;	
}

#favorites h2 {
	font-size: 1.5em;
	font-family: Arial;
	color: rgb(156, 192, 143);
}

#favorites {
	position: absolute;
	left: 20px;
}

#header-section {
	background-color: rgb(55, 64, 60);
    background-color: rgba(0,0,0,.5);
    color: #fff;	
    font-weight: 700;
	font-family: Arial;
    position: absolute;
    top: 215px;
    left: 50%;
    transform: translate(-50%,-50%);
    z-index: 2;
    width: 80%;
    max-width: 500px;
    padding: 10px;
    text-align: center;
}

.hide {
	display: none;
 }

.alert{
	background-color: #E60000;
 }

.moodDropDownBtn {	
	font-family: sans-serif;
	background-color: rgb(156, 192, 143);	
	color: rgb(255, 255, 255);
	padding: 16px;
	font-size: 16px;
	border-radius: 12px;
	box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
	border: none;	
  }

.spiritDropDownBtn {	
	font-family: Arial;
	background-color: rgb(156, 192, 143);	
	color: rgb(255, 255, 255);
	padding: 16px;
	font-size: 16px;
	border-radius: 12px;
	box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
	border: none;	
  }
  
.buttonSelectors {
	font-family: Arial;
	position: relative;
	text-align: center;	
  }
  
.dropdown-content {	
	font-family: Arial;
	display: none;
	position: relative;	
	text-align: center;
	background-color: #f1f1f1;
	min-width: 160px;
	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
	z-index: 1;
  }
  
.dropdown-content a {	
	font-family: Arial;
	color: black;
	padding: 12px 16px;
	text-decoration: none;
	display: block;	
	text-align: center;
  }
  
.dropdown-content a:hover {	
	font-family: Arial;
	background-color: #ddd;
}
  
.buttonSelectors:hover .dropdown-content {	
	font-family: Arial;
	display: block;
}
  
.buttonSelectors:hover .dropDownBtn {	
	font-family: Arial;
	background-color: rgb(105, 130, 96);
	color: rgba(0,0,0);
}

#drinkImg{
	height: auto; 
    width: auto; 
    max-width: 300px; 
    max-height: 300px;
	position: center;
	border-radius: 8px;
}

#cocktail-recipe{	
	font-family: Arial;
	text-align: center;	
}

.container{	
	font-family: Arial;
	margin: 0 auto;	
	height: auto; 
    width: auto; 
    max-width: 300px; 
    max-height: 700px;
	background-color: white;
	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.5), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
	margin-bottom: 25px;
	text-align: center;
	padding: 10px 20px;
	border-radius: 8px;
	
    
}

.expand{	
	font-family: Arial;
	background-color: rgb(156, 192, 143);	
	color: rgb(255, 255, 255);
	padding: 8px;
	font-size: 16px;
	border-radius: 12px;
	box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
	border: none;	
}

.newDrink{	
	font-family: Arial;
	background-color: rgb(156, 192, 143);	
	color: rgb(255, 255, 255);
	padding: 8px;
	font-size: 16px;
	border-radius: 12px;
	box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
	border: none;	
	position: absolute;
	left: 20px;
}

.branding {	
	font-family: Arial;
	color:rgb(156, 192, 143);
	width: 40%;
	left: 30%;
	right: 30%;
	text-align: center;
	position: relative;
}

